2018-01-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/pr70278.c: Add effective target checks for armv4t
	and arm_thumb1_ok.

2018-01-18  Boris Kolpackov  <boris@codesynthesis.com>

        PR other/70268
        * c-c++-common/ffile-prefix-map.c: New test.
        * c-c++-common/fmacro-prefix-map.c: New test.
        * c-c++-common/cpp/ffile-prefix-map.c: New test.
        * c-c++-common/cpp/fmacro-prefix-map.c: New test.

2018-01-18  Martin Liska  <mliska@suse.cz>

	* gcc.target/i386/indirect-thunk-3.c: Remove duplicate options.
	* gcc.target/i386/indirect-thunk-4.c: Likewise.
	* gcc.target/i386/indirect-thunk-6.c: Likewise.
	* gcc.target/i386/indirect-thunk-bnd-4.c: Likewise.
	* gcc.target/i386/ret-thunk-10.c: Likewise.
	* gcc.target/i386/ret-thunk-11.c: Likewise.
	* gcc.target/i386/ret-thunk-12.c: Likewise.
	* gcc.target/i386/ret-thunk-15.c: Likewise.
	* gcc.target/i386/ret-thunk-9.c: Likewise.

2018-01-18  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/arm/xor-and.c: Fix dg-options and dg-add-options
	order.

2018-01-18  Nathan Sidwell  <nathan@acm.org>

	PR c++/83160
	* g++.dg/cpp0x/pr83160.C: New.

2018-01-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/83887
	* gcc.dg/graphite/pr83887.c: New testcase.
	* gfortran.dg/graphite/pr83887.f90: Likewise.
	* gfortran.dg/graphite/pr83887.f: Likewise.

2018-01-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/65578
	* gcc.target/arm/builtin-bswap.x: New file.
	* gcc.target/arm/builtin-bswap-1.c: Include the above.  Add checks
	and options for armv6t2.
	* gcc.target/arm/builtin-bswap-2.c: Include the above.  Add checks
	and options for Thumb1.
	* gcc.target/arm/builtin-bswap16.x: New file.
	* gcc.target/arm/builtin-bswap16-1.c: Include the above.  Add checks
	and options for armv6t2.
	* gcc.target/arm/builtin-bswap16-2.c: Include the above.  Add checks
	and options for Thumb1.

2018-01-18  Christophe Lyon  <christophe.lyon@linaro.org>
